@@ -1,5 +1,9 @@
 2007-06-06 Xavier Claessens  <xclaesse@gmail.com>
 
+	* po/POTFILES.in: Updated with new files.
+
+2007-06-06 Xavier Claessens  <xclaesse@gmail.com>
+
 	* libempathy-gtk/empathy-status-icon.c:
 	* libempathy-gtk/empathy-subscription-dialog.glade:
 	* libempathy-gtk/empathy-contact-widget.c:
